# simd-utf8-check

./: Cargo.toml  Readme.md
ascii/encoding_rs/base/: estimates.json  tukey.json
ascii/encoding_rs/change/: estimates.json
ascii/encoding_rs/new/: estimates.json  sample.json  tukey.json
ascii/encoding_rs/report/: index.html
ascii/is_utf8/base/: estimates.json  sample.json  tukey.json
ascii/is_utf8/change/: estimates.json
ascii/is_utf8/new/: estimates.json  sample.json  tukey.json
ascii/is_utf8/report/: index.html
ascii/is_utf8_hoehrmann/base/: estimates.json  sample.json  tukey.json
ascii/is_utf8_hoehrmann/change/: estimates.json
ascii/is_utf8_hoehrmann/new/: estimates.json  sample.json  tukey.json
ascii/is_utf8_hoehrmann/report/: index.html
ascii/report/: index.html
ascii/simd/base/: estimates.json  sample.json  tukey.json
ascii/simd/change/: estimates.json
ascii/simd/new/: estimates.json  sample.json  tukey.json
ascii/simd/report/: index.html
ascii/simd_or_encoding_rs_with_pre_check/new/: estimates.json  sample.json  tukey.json
ascii/simd_or_encoding_rs_with_pre_check/report/: index.html
ascii/std/base/: estimates.json
ascii/std/change/: estimates.json
ascii/std/new/: estimates.json  (+2 more)
big10/report/: index.html
criterion/: validate-utf8.rs
cyr/report/: index.html
enwiki8/report/: index.html
jawik10/report/: index.html
mixed/report/: index.html
mosty_ascii/report/: index.html
report/: index.html
src/: benches.rs  lib.rs  simd_validation.rs  std_validation.rs
tests/fixtures/: long.txt  long_cy.txt  mixed.txt
(+245 files in other folders)
